# tipe

./: .gitignore  README.md  calgary.bwt  notes.md  notes_tipe.txt  test.bwt  test.dbwt  test.py
c/: CMakeLists.txt
c/bitwise_ppm/: arithmetic_coder.h  bitwise_ppm.h  bitwise_ppm_handler.c  bitwise_ppm_handler.h  cvector_interface.h  defs.h
c/bitwise_ppm_flat/: acode_t_vect.c  arithmetic_coder_flat.c  arithmetic_coder_flat.h  bitwise_ppm_flat.c  bitwise_ppm_flat.h  bitwise_ppm_flat_handler.c  bitwise_ppm_flat_handler.h  cvector_core.h  defs.h  main_bitwise_ppm_flat.c
c/rle/: main_rle.c  rle_code_t_vect.c  rle_code_t_vect.h  rle_handler.c  rle_handler.h
draft/: adaptative_bagrel2.py  lien_detto.txt
final_documents/: abstract.md  dot.md  titre_motivations_justifications.md
final_documents/mcot/: mcot.bib  mcot.tex  mcot_brut.txt  mcot_brut_f.txt  mcot_rem.tex  tbagrelstandard.sty
final_documents/presentation/: beamerstylebluesky.sty  beamerstyleceylan.sty  presentation.md  presentation.tex
measures/: measures_bwt_rle.txt  plot_rec_zip.py
measures/arithmetic_coding/: compute  compute.c  compute_plot.py
measures/bitwise_ppm_bwt/: bench_plot.py  bitwise_ppm.json  bitwise_ppm.py  bitwise_ppm_exe_0  bitwise_ppm_flat.json  bitwise_ppm_flat.py  bitwise_ppm_flat_bwt.py  bitwise_ppm_flat_bwt_rle.json  bitwise_ppm_flat_bwt_rle.py  bitwise_ppm_flat_exe  bitwise_ppm_genetics.py  bwt  bwt64  bwt_bitwise_ppm_flat.json  bwt_bitwise_ppm_flat.py  bwt_rle.json  bwt_rle.py  bwt_rle_bitwise_ppm_flat.json  bwt_rle_bitwise_ppm_flat.py  calgary_0.enc  calgary_1.enc  calgary_2.enc  calgary_3.enc  calgary_bwt_rle_flat.bwt  calgary_bwt_rle_flat.enc1  calgary_bwt_rle_flat.enc2  calgary_flat.bwt  results.txt  (+11 more)
resources/: Compression de données — Wikipédia.html  Data Compression Explained.html  bitwise_encoder_link  bitwise_encoder_source.txt  dce_notes.md  links.md  notes.tex  shannon.tex  unzpaq108.cpp
rules/: general_notes.tex  regles.tex
src/: TODO.md  adaptative_huffman.md  adaptative_huffman.py  btw_rle.md  btw_rle.py  bwt.py  rle.md  sample.py
tipe_c/: CMakeLists.txt  btw_2.c  build.sh  bwt.c  bwt.md  bwt_2.c  bwt_2.h  bwt_2_launcher.c  bwt_2_launcher.h  callgrind.out.4223  callgrind.out.6142  gmon.out  main.c  profile.txt  tipe_c
tipe_c/bitwise_ppm/: acode_t_vect.h  arithmetic_coder.c  arithmetic_coder.h  bitwise_ppm.c  defs.h  main_bitwise_ppm.c
tipe_c/bwt/: bwt.md  bwt_2.c  bwt_2.h  bwt_2_launcher.c  bwt_2_launcher.h  main_bwt.c
tipe_c/suffix_array/: build.sh  clist.c  clist.h  main.c  main_suffix_array.c  sais.c  sais.h  suffix_array  suffix_array.c  suffix_array.h
(+69 files in other folders)
